<?xml version = "1.0"?>

<!-- ############################################################################ 
     ############################ ARAV Visualizator ############################# 
     ############################################################################
     #################### Author : Alberto Ceballos Gonzalez #################### 
     ######## E-mail : alberto.ceballos-gonzalez@student.isae-supaero.fr ######## 
     ######### (c) Copyright 2022. Alberto Ceballos. All Rights Reserved ########  
     ############################################################################ -->

<package format = "2">

  <name>visual</name>
  <version>2.0.0</version>
  <description>The visualization package of ARAV</description>
  <maintainer email = "alberto.ceballos-gonzalez@student.isae-supaero.fr">Alberto Ceballos</maintainer>
  <license>(c) Copyright 2022. Alberto Ceballos. All Rights Reserved</license>
  <url type = "repository">https://github.com/ceballos-alberto/arav-test.git</url>
  <author email = "alberto.ceballos-gonzalez@student.isae-supaero.fr">Alberto Ceballos</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rviz</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>rospy</build_depend>
  
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>tf2_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  
  <exec_depend>rviz</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rospy</exec_depend>
  
</package>

<!-- ############################################################################ 
     ############################ ARAV Visualizator ############################# 
     ############################################################################
     #################### Author : Alberto Ceballos Gonzalez #################### 
     ######## E-mail : alberto.ceballos-gonzalez@student.isae-supaero.fr ######## 
     ######### (c) Copyright 2022. Alberto Ceballos. All Rights Reserved ########  
     ############################################################################ -->
